implementations/rust/ockam/ockam/tests/node/fail_if_macro_has_unsupported_syntax.rs
#[ockam::node(timeout = 100)]
async fn main(mut c: ockam::Context) {
    c.stop().await.unwrap();
}
